Working Combined Thresholding Function
Successfully applied thresholding and mask to the test images

--- a/Gaurav_Project.ipynb
+++ b/Gaurav_Project.ipynb
@@ -20,15 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import os\n",
     "import cv2\n",
     "import glob\n",
     "import matplotlib.pyplot as plt\n",
     "import pickle\n",
+    "import matplotlib.image as mpimg\n",
     "%matplotlib inline"
    ]
   },
@@ -36,12 +38,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Calibrate Camera"
+    "# Calibrate Camera Function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,12 +119,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Distortion Correction"
+    "# Distortion Correction - Get Perspective Matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,24 +183,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Main Code Body"
+    "# Run Camera Calibrate and Get Perspective Matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def perspective_matrix():\n",
-    "    mtx, dist = camera_calibrate()\n",
-    "    M = corners_unwarp(mtx, dist)\n",
-    "    return M"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +213,203 @@
     }
    ],
    "source": [
-    "persp_M = perspective_matrix()"
+    "mtx, dist = camera_calibrate()\n",
+    "perspective_M = corners_unwarp(mtx, dist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import Test Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['straight_lines1.jpg', 'straight_lines2.jpg', 'test1.jpg', 'test2.jpg', 'test3.jpg', 'test4.jpg', 'test5.jpg', 'test6.jpg']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "dirlist = os.listdir(\"test_images/\")\n",
+    "# op_path = \"test_images_output\"\n",
+    "print(dirlist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Individual HSL and Gradient Thresholding Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def s_select(img, thresh=(100, 255)):\n",
+    "    # 1) Convert to HLS color space\n",
+    "    hls = cv2.cvtColor(img,cv2.COLOR_RGB2HLS)\n",
+    "    # 2) Apply a threshold to the S channel\n",
+    "    s_channel = hls[:,:,2]\n",
+    "    # 3) Return a binary image of threshold result\n",
+    "    binary_output = np.zeros_like(s_channel)\n",
+    "    binary_output[(s_channel > thresh[0]) & (s_channel <= thresh[1])] = 1\n",
+    "#     binary_output = np.copy(img) # placeholder line\n",
+    "    return binary_output\n",
+    "\n",
+    "def l_select(img, thresh=(120, 255)):\n",
+    "    # 1) Convert to HLS color space\n",
+    "    hls = cv2.cvtColor(img,cv2.COLOR_RGB2HLS)\n",
+    "    # 2) Apply a threshold to the S channel\n",
+    "    l_channel = hls[:,:,1]\n",
+    "    # 3) Return a binary image of threshold result\n",
+    "    binary_output = np.zeros_like(l_channel)\n",
+    "    binary_output[(l_channel > thresh[0]) & (l_channel <= thresh[1])] = 1\n",
+    "#     binary_output = np.copy(img) # placeholder line\n",
+    "    return binary_output\n",
+    "\n",
+    "def abs_sobel_thresh(img, orient='x', sobel_kernel=3, thresh=(0, 255)):\n",
+    "    # Calculate directional gradient\n",
+    "    # Apply threshold\n",
+    "    if orient == 'x':\n",
+    "        abs_sobel = np.absolute(cv2.Sobel(img,cv2.CV_64F,1,0))\n",
+    "    else:\n",
+    "        abs_sobel = np.absolute(cv2.Sobel(img,cv2.CV_64F,0,1))\n",
+    "        \n",
+    "    scaled_sobel = np.uint8(255*abs_sobel/np.max(abs_sobel))\n",
+    "    grad_binary = np.zeros_like(scaled_sobel)\n",
+    "    grad_binary[(scaled_sobel >= thresh[0]) & (scaled_sobel <= thresh[1])] = 1\n",
+    "    return grad_binary\n",
+    "\n",
+    "def mag_thresh(img, sobel_kernel=3, mag_thresh=(0, 255)):\n",
+    "    # Calculate gradient magnitude\n",
+    "    # Apply threshold\n",
+    "    sobelx = cv2.Sobel(img,cv2.CV_64F, 1, 0, ksize = sobel_kernel)\n",
+    "    sobely = cv2.Sobel(img,cv2.CV_64F, 0, 1, ksize = sobel_kernel)\n",
+    "    gradmag = np.sqrt(sobelx**2 + sobely**2)\n",
+    "    scale_factor = np.max(gradmag)/255\n",
+    "    gradmag = (gradmag/scale_factor).astype(np.uint8)\n",
+    "    mag_binary = np.zeros_like(gradmag)\n",
+    "    mag_binary[(gradmag>=mag_thresh[0]) & (gradmag<=mag_thresh[1])] = 1\n",
+    "    return mag_binary\n",
+    "\n",
+    "def dir_threshold(img, sobel_kernel=3, thresh=(0, np.pi/2)):\n",
+    "    # Calculate gradient direction\n",
+    "    # Apply threshold\n",
+    "    sobelx = cv2.Sobel(img,cv2.CV_64F, 1, 0, ksize = sobel_kernel)\n",
+    "    sobely = cv2.Sobel(img,cv2.CV_64F, 0, 1, ksize = sobel_kernel)\n",
+    "    abs_sobelx = np.absolute(sobelx)\n",
+    "    abs_sobely = np.absolute(sobely)\n",
+    "    absgraddir = np.arctan2(abs_sobely, abs_sobelx)\n",
+    "    dir_binary = np.zeros_like(absgraddir)\n",
+    "    dir_binary[(absgraddir >= thresh[0]) & (absgraddir <= thresh[1])] = 1\n",
+    "    return dir_binary\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Combined Thresholding Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def comb_threshold(img):\n",
+    "    hls = cv2.cvtColor(img, cv2.COLOR_RGB2HLS)\n",
+    "    gray = cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
+    "    height, width = gray.shape\n",
+    "    s_channel = hls[:,:,2]\n",
+    "    l_channel = hls[:,:,1]\n",
+    "    \n",
+    "    # img to s threshold\n",
+    "    s_binary = s_select(img,thresh=(150, 255))\n",
+    "    \n",
+    "    # img to l threshold\n",
+    "    l_binary = l_select(img,thresh=(120, 255))   \n",
+    "    \n",
+    "    # schannel to x threshold\n",
+    "    ksize = 9  # Choose a larger odd number to smooth gradient measurements\n",
+    "    gradx = abs_sobel_thresh(s_channel, orient='x', sobel_kernel=ksize, thresh=(20, 100))\n",
+    "    \n",
+    "    # combined\n",
+    "    combined = np.zeros_like(s_binary)\n",
+    "    combined[((gradx == 1) | (s_binary == 1)) & ((l_binary == 1) & (s_binary == 1))] = 1\n",
+    "\n",
+    "    # apply the region of interest mask\n",
+    "    mask = np.zeros_like(combined)\n",
+    "    region_of_interest_vertices = np.array([[0,height-1], [width/2, int(0.5*height)], [width-1, height-1]], dtype=np.int32)\n",
+    "    cv2.fillPoly(mask, [region_of_interest_vertices], 1)\n",
+    "    thresholded = cv2.bitwise_and(combined, mask)\n",
+    "    \n",
+    "    return thresholded\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get Threshold Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dir_binary' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-18-cabb1aa5066d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdirlist\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mimg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmpimg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"test_images/\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mthresholded\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcomb_threshold\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mmpimg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimsave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"output_images/thresholded/\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mthresholded\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcmap\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'gray'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-17-6487ace0117e>\u001b[0m in \u001b[0;36mcomb_threshold\u001b[1;34m(img)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;31m# combined\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m     \u001b[0mcombined\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros_like\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdir_binary\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m     \u001b[0mcombined\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgradx\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m|\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ms_binary\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ml_binary\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ms_binary\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dir_binary' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "for i in dirlist:\n",
+    "    img = mpimg.imread(os.path.join(\"test_images/\",i))\n",
+    "    thresholded = comb_threshold(img)\n",
+    "    mpimg.imsave(os.path.join(\"output_images/thresholded/\",i),thresholded,cmap = 'gray')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Perspective View Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def persp_view(img, M):\n",
+    "    "
    ]
   }
  ],
